[package]
name = "ichain"
description = "IChain is a command program that chains muliple executions of programs passing inputs and outputs as configured in a INI like file."
repository = "https://github.com/emuvi/ichain/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
rubx = { path = "../rubx" }