[package]
name = "pchain"
description = "PChain is a command program that chains multiple executions of programs in parallel passing inputs and outputs between then as configured in a PCH file."
repository = "https://github.com/emuvi/pchain"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
tokio = { version = "1", features = ["process", "rt", "macros"] }
rubx = { version = "0" }
